# Custom-AI-Hardware-Inference

./: .gitignore  README.md  Results.md  activation_scales.json  benchmark.py  calibrate.py  export_onnx.py  fire_training.ipynb  fire_training.py  m1_baseline.md  model_int8.json  openvino_benchmark  quantization.py  quantized_inference.py  stage3_one_layer.py
benchmarks/: onnx_benchmark.py
cpp_engine/: CMakeLists.txt  main.cpp  model.cpp  model.h  ops.cpp  ops.h  tensor.cpp  tensor.h
quantization/: model_int8.json  quantization.py  quantized_inference.py  save_model.py
